src/golden/functions/typeerrors/test.golden/nocol.fl
This is supposed to simulate a typo of "col" for "count"

	struct Thing
		Number count

	card Typo
		event moveIt (ClickEvent ev)
			myrun <- []
				hc = hccast ev.source
				myrun = item hc.col ["hello", "world"]

		hccast (Thing t) = t
		hccast (Any a) = Error "no"
